# SimpleWebServer

./: .gitignore  Cargo.toml  readme.md
doc/: .~lock.documentation.odt#  documentation.odt
html/: form.html  page_begin.html
image_api/: Cargo.toml
image_api/src/: errors.rs  image_api.rs  lib.rs
opencv/: Cargo.toml
opencv/src/: errors.rs  image.rs  lib.rs
opencv_sys/: Cargo.toml
opencv_sys/src/: error.rs  image.rs  lib.rs
src/: errors.rs  image_api.rs  image_app.rs  main.rs
