[package]
name = "simple_web_server"
version = "0.1.0"
authors = ["trionprog <trionprog@gmail.com>"]
edition = "2018"

[dependencies]
#actix-web = "0.7.19"
futures = "*"
failure = "*"
failure_derive = "*"
#actix-multipart = { git="https://github.com/actix/actix-web.git" }
actix-rt = "0.2.2"
#actix-web = { path="../actix-web" }
actix-web = "1.0.0-alpha.4"
actix-multipart = { path="../actix-web/actix-multipart" }
env_logger = "0.6"
url = "1.7.2"
base64 = "0.10.1"
libc = "0.2.0"