[package]
name = "simple_web_server"
version = "0.1.0"
authors = ["trionprog <trionprog@gmail.com>"]
edition = "2018"

[workspace]

members = [
  "./",
  "image_api",
  "opencv",
  "opencv_sys"
]

[dependencies]
futures = "0.1.29"
failure = "0.1.5"
failure_derive = "0.1.5"

actix-rt = "0.2.5"
actix-web = "1.0.8"
actix-multipart = "0.1.4"
env_logger = "0.6"
ctrlc = "3.1.2"
#openssl-probe = "0.1.2"

image_api = { version = "0.1.0", path = "image_api"}
opencv = { version = "0.1.0", path = "opencv"}
opencv_sys = { version = "0.1.0", path = "opencv_sys"}