[package]
name = "image_api"
version = "0.1.0"
authors = ["trionprog <trionprog@gmail.com>"]
edition = "2018"

[dependencies]
futures = "0.1.29"
failure = "0.1.5"
failure_derive = "0.1.5"

url = "1.7.2"
base64 = "0.10.1"

opencv = { version = "0.1.0", path = "../opencv" }
actix-web = "1.0.8"
#awc = "0.2.7"

openssl = "0.10.25"

[dependencies.awc]
version = "0.2.7"
#default-features = false # do not include the default features, and optionally
                         # cherry-pick individual features
features = ["ssl"]